# Heron

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/heron/: main.py
backend/heron/approver/: approver.py
backend/heron/builder/: builder.py
backend/heron/builder/templates/: README.md.j2  app.conf.j2  dashboard.xml.j2  inputs.conf.j2  props.conf.j2  savedsearches.conf.j2  transforms.conf.j2
backend/heron/deployer/: deployer.py  validators.py
backend/heron/models/: approval.py  build_plan.py  build_result.py  deploy_result.py  observation.py  proposal.py
backend/heron/observer/: observer.py
backend/heron/planner/: planner.py
backend/heron/splunk/: mcp_client.py  splunk_client.py
backend/heron/storage/: db.py
backend/heron/tuner/: tuner.py
backend/heron/ui_stream/: bus.py  events.py  pipeline.py
backend/scripts/: generate_k8s_data.py  stage_demo.py  test_builder.py  test_deploy.py  test_full_loop.py  test_maintenance.py  test_planner.py
docs/: demo-script.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/approvals/: page.tsx
frontend/app/apps/: page.tsx
frontend/app/changelog/: page.tsx
frontend/app/changelog/[appName]/: page.tsx
frontend/components/: CodeBlock.tsx  Sidebar.tsx
frontend/lib/: api.ts
