[project]
name = "heron"
version = "0.1.0"
description = "Autonomous agent that builds and maintains Splunk apps end-to-end"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "google-genai",
    "splunk-sdk",
    "pydantic",
    "python-dotenv",
    "httpx",
    "aiosqlite",
    "jinja2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["heron*"]
